fix: button misalignment in safari

--- a/app/_components/iconButton/iconButton.module.css
+++ b/app/_components/iconButton/iconButton.module.css
@@ -1,3 +1,7 @@
+.button {
+  vertical-align: middle;
+}
+
 .icon {
   font-weight: 500;
 }
