--- a/app/_components/nav/nav.module.css
+++ b/app/_components/nav/nav.module.css
@@ -58,6 +58,7 @@
 
 .contact {
   display: inline-block;
+  vertical-align: middle;
   margin-left: 24px;
   padding: 15px;
   border-radius: 12px;
